Fix spacing issue

Spacing was being incorrectly applied in circumstances where invisible
items existed at the end of a positioner.

Task-number: QTBUG-20961
Change-Id: I49ebc8e96a1564c0ff2bde1c1bb3f91d3c441488
Reviewed-on: http://codereview.qt.nokia.com/3232
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Michael Brasser <michael.brasser@nokia.com>